--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.max</groupId>
+    <groupId>com.github.mx-go</groupId>
     <artifactId>mongo-spring-support</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
